--- a/RDVMED/conx/conx.html
+++ b/RDVMED/conx/conx.html
@@ -27,7 +27,7 @@
                 <input type="password" placeholder="Enter Password" name="password" required>
             </div>
             <div>
-                <input type="radio" value="none" id="radioOne" name="grade1" checked />
+                <input type="radio" value="none" id="radioOne" name="grade1" />
                 <label for="radioOne" class="radio">Je suis un Medecin</label>
                 <input type="radio" value="none" id="radioTwo" name="grade2" />
 
